# smrt

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  build.rs
.cargo/: config.toml
.github/workflows/: ci.yml
deploy/: README.md  deploy.sh  smrt.nginx.conf  smrt.service
docs/: README.md  api.md  architecture.md  concepts.md  development.md  operations.md  side-required-audit.md
examples/: evidence_dump.rs  meta_probe.rs  parse_bench.rs
examples/industrial/: README.md  build-pack-config.py  curator.toml  enrich-mods.py  extract-mod-annotations.py  full-pipeline.sh  pack-meta.toml  role-table.toml  upload-mods.sh  upload-static.py
src/: admin.rs  config.rs  enrich.rs  error.rs  jobs.rs  lib.rs  main.rs  modrinth.rs  pack_config.rs  routes.rs  state.rs  storage.rs  types.rs
src/accounts/: mod.rs  schema.sql
src/authoring/: archive.rs  bootstrap.rs  build.rs  bytecode.rs  classfile.rs  curator.rs  depfill.rs  harvest.rs  harvest_sched.rs  jardiff.rs  mod.rs  modmeta.rs  modrinth.rs  reconstruct.rs  resolve.rs  sources.rs  validate.rs
src/domain/: diff.rs  manifest.rs  mod.rs  pack.rs  server.rs  side.rs  version.rs
src/http/: admin.rs  apidoc.rs  auth.rs  error.rs  jobs.rs  member.rs  mod.rs  panel.rs  public.rs  registry.rs  session.rs
src/registry/: authored.rs  classify.rs  db.rs  migrations.rs  mod.rs  model.rs  queries.rs  semver.rs  upsert.rs
src/registry/schema/: 0001_init.sql  0002_seed_loaders.sql  0003_pack_build_fingerprint.sql  0005_mod_author.sql  0006_mod_version_modrinth.sql  0007_mod_release.sql  0008_mod_content_sig.sql  0010_derived_graph.sql  0011_relation_artifact.sql  0012_side_class.sql  0013_jar_class.sql  0014_side_confidence.sql  0015_jar_class_source.sql  0017_loader_bridge.sql  0018_loader_provides.sql
src/routes/: mod.rs
testdata/: side-labels.toml
testdata/corpus/: baseline.json  baseline.py  fetch.py  topup.py
tests/: corpus_classify.rs
web/: .gitignore  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vite.config.ts
web/scripts/: branding-shot.mjs  pack-editor-check.mjs  picker-shot.mjs  preview-shot.mjs  shot.mjs  structured-shot.mjs  upload-check.mjs
web/src/: App.svelte  app.css
web/src/lib/: anim.svelte.ts  api.ts  dialogs.svelte.ts  diff.ts  graphhover.svelte.ts  i18n.svelte.ts  markdown.ts  motion.svelte.ts  preview.ts  reload.svelte.ts  roles.ts  route.svelte.ts  tendrils.svelte.ts  terms.svelte.ts  toasts.svelte.ts  types.ts
web/src/lib/bindings/: ActiveConflict.ts  AssetEntry.ts  AuditRow.ts  AuthSpec.ts  AuthoringPacksListing.ts  BuildModRow.ts  (+75 more)
web/src/views/: AppShell.svelte  Audit.svelte  Avatar.svelte  BrandingEditor.svelte  Browse.svelte  BuildConsole.svelte  CachePicker.svelte  CuratorEditor.svelte  DialogHost.svelte  GithubPicker.svelte  GraphCanvas.svelte  GraphFit.svelte  GraphView.svelte  IdentityDialog.svelte  ImageCropper.svelte  JobLog.svelte  Login.svelte  MirrorPicker.svelte  ModIcon.svelte  ModManager.svelte  ModPage.svelte  ModRow.svelte  Moderation.svelte  ModrinthPicker.svelte  MyPacks.svelte  PackEditor.svelte  PackGraph.svelte  PackPreview.svelte  Profile.svelte  PublicBrowse.svelte  ResolvePanel.svelte  ServerEditor.svelte  TendrilEdge.svelte  TendrilLayer.svelte  UsersView.svelte
(+10 files in other folders)
