[package]
name = "smrt"
version = "0.1.0"
edition = "2024"  # Rust language edition, NOT calendar year. Latest is 2024 (stabilized in 1.85, Feb 2025).
description = "Mirror backend for SmartyCraft. HTTP service serving pack manifests, server metadata, and self-hosted mod jars."
license = "Apache-2.0"
repository = "https://github.com/Kitty-Hivens/smrt"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "compression-br"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
thiserror = "2"
tokio-util = { version = "0.7", features = ["io"] }
time = { version = "0.3", features = ["formatting"] }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"
