[package]
name = "smrt"
version = "0.1.0"
edition = "2024"  # Rust language edition, NOT calendar year. Latest is 2024 (stabilized in 1.85, Feb 2025).
description = "Mirror backend for SmartyCraft. HTTP service serving pack manifests, server metadata, and self-hosted mod jars."
license = "Apache-2.0"
repository = "https://github.com/Kitty-Hivens/smrt"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "compression-br"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
thiserror = "2"
tokio-util = { version = "0.7", features = ["io"] }
time = { version = "0.3", features = ["formatting"] }
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
zip = { version = "2", default-features = false, features = ["deflate"] }
sha1 = "0.10"
hex = "0.4"
percent-encoding = "2.3.2"
toml = "0.8"
rust-embed = "8"

[dev-dependencies]
tempfile = "3"

[[bin]]
name = "smrt"
path = "src/main.rs"

## smrt-ingest is the v1 SC-archive ingestor; superseded by smrt-pack in v2.
## Disabled (not compiled) until the v2 CLI lands; v1 source kept on disk for
## reference during the refactor.
# [[bin]]
# name = "smrt-ingest"
# path = "src/bin/smrt-ingest.rs"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"
